<resources>
    <string name="app_name">Downloader</string>


    <string name="maintainer_placeholder">Maintainer: %s</string>
    <string name="status_placeholder">Active: %s</string>
    <string name="vendor_placeholder">%s</string>
    <string name="model_placeholder">%s</string>
    <string name="last_updated_placeholder">Last updated: %s</string>
    <string name="release_status_placeholder">Released %s</string>

    <string name="archive_button">Archive</string>
    <string name="download_button">Download</string>
</resources>