<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.device.DeviceFragment">

    <FrameLayout
        android:id="@+id/loading_indicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.loadingindicator.LoadingIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>


    <LinearLayout
        android:id="@+id/device_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/device_vendor"
            style="@style/TextAppearance.Material3.TitleMedium.Emphasized"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vendor_placeholder" />

        <TextView
            android:id="@+id/device_model"
            style="@style/TextAppearance.Material3.HeadlineMedium.Emphasized"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/model_placeholder" />

        <TextView
            android:id="@+id/device_maintainer"
            style="@style/TextAppearance.Material3.BodyMedium.Emphasized"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maintainer_placeholder" />

        <TextView
            android:id="@+id/device_status"
            style="@style/TextAppearance.Material3.BodyMedium.Emphasized"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_placeholder" />

        <TextView
            android:id="@+id/release_status"
            style="@style/TextAppearance.Material3.BodyMedium.Emphasized"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/release_status_placeholder" />

        <TextView
            android:id="@+id/last_updated"
            style="@style/TextAppearance.Material3.BodyMedium.Emphasized"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_updated_placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/device_archive"
                style="@style/Widget.Material3Expressive.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="0.5"
                android:text="@string/archive_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/device_download"
                style="@style/Widget.Material3Expressive.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="0.5"
                android:text="@string/download_button" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>